Implement proof of concept fetching from sqlite db

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,7 +20,10 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "paths": {
+      "src/*": ["./src/*"]
+    }
   },
   "include": ["vite.config.ts"]
 }
