--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "biome format --write",
+    "lint": "biome lint --write"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -15,6 +16,7 @@
     "sql.js": "^1.13.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.8",
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
