--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "biome lint --write"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.139.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sql.js": "^1.13.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "@eslint/js": "^9.39.1",
+    "@tanstack/router-plugin": "^1.139.14",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
