--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,13 @@
 {
   "files": {
-    "includes": ["**", "!**/routeTree.gen.ts"]
+    "includes": ["**", "!**/routeTree.gen.ts", "!dist"]
   },
   "formatter": {
     "useEditorconfig": true
+  },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    }
   }
 }
