--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -22,7 +22,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
-      "src/*": ["./src/*"]
+      "src/*": ["./src/*"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["vite.config.ts"]
