--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-router": "^1.139.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
