--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "VITE_BASE_PATH=/csl-v5 tsc -b && vite build",
+    "build": "tsc -b && vite build --mode pages",
     "preview": "vite preview",
     "format": "biome format --write",
     "lint": "biome lint --write",
